auto fix code open rewrite